# tas-policy-cli

./: .gitignore  Cargo.toml  README.md
samples/: sev_measurement.json  sev_measurement_bad.json  tdx_measurement.json  tdx_measurement_bad.json  test-api.key  test-key-pub.pem  test-key.pem
tas-policy-cli/: Cargo.toml
tas-policy-cli/src/: args.rs  convert.rs  main.rs
tas-policy-cli/src/commands/: add.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  remove.rs  update.rs
tas-policy-cli/tests/: delete_cmd.rs
tas-policy-lib/: Cargo.toml
tas-policy-lib/src/: client.rs  error.rs  lib.rs
tas-policy-lib/src/policy/: mod.rs  sev.rs  signed.rs  tdx.rs  types.rs  validation.rs
tas-policy-lib/src/signing/: key_loader.rs  mod.rs  signer.rs
