[workspace]
members = ["tas-policy-lib", "tas-policy-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/example/tas-policy"

[workspace.dependencies]
# Shared dependencies with versions pinned at workspace level
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
strip = true
codegen-units = 1
